<resources>
    <string name="app_name">Pihlakodu app</string>
    <string name="app_name_short">aire</string>
    <string name="locations">Locations</string>
    <string name="info">Info</string>
    <string name="contact">Contact</string>
    <string name="intro">Intro</string>
    <string name="support">Call Support</string>
    <string name="followme">Okay, follow me to the location</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="stayclose">Stay in front of the robot</string>
    <string name="arrival">We have arrived at location</string>
    <string name="selectmenu">Please select from the menu</string>
    <string name="start_now">Start navigating</string>
    <string name="navigating_to">Navigating to</string>
    <string name="Charity">Idea submittion</string>
    <string name="Offers">Today\'s menu</string>
    <string name="Market">B2B Offers</string>
    <string name="Events">Events</string>
    <string name="Services">Services</string>
    <string name="Secretary">Call secretary</string>
    <string name="Survey">Feedback</string>
    <string name="Return">Return</string>
    <string name="Close">Closing...</string>
    <string name="AssistantUnavailable">Secretar unavailable right now.</string>
    <string name="AssistantCalling">Calling secretary, please wait up to 20 seconds...</string>
    <string name="Distance">Distance: </string>
    <string name="LocationArrived">We have arrived at</string>
    <string name="GreetWelcome">Hello! Can I help?</string>
    <string name="GreetGoodbye">Bye!</string>
    <string name="ConferenceArrived">Take the stairs to arrive at the Conference center.</string>
    <string name="TakeTheLiftToFloor">Take the lift to</string>
    <string name="ToReachThe">to reach the</string>
    <string name="TroughTheDoorAndToTheLeft">Go trough the D-door, and at end of the corridor go left to reach the</string>
    <string name="GoToReception">Please ask the reception.</string>
    <string name="LocationFollow">Please follow me to the location!</string>
    <string name="Reposing">Reposing, please wait...</string>
    <string name="Remaining">Remaining:</string>
    <string name="videoButton">Promo-\nvideo</string>
    <string name="feedbackButton">Feedback</string>
    <string name="presentersButton">Presenters</string>
    <string name="scheduleButton">Schedule</string>
    <string name="thankyou">Thank you!</string>
    <string name="EventNavigation">Locations</string>
    <string name="EventTeam" translatable="false">Creativity Matters</string>
    <string name="EventVideo">Robot race</string>
    <string name="Restaurant">Plus Cafe menu</string>
    <string name="Scan">Analyze!</string>
    <string name="ScanButton">Analyze</string>
    <string name="scan">Scan.</string>
    <string name="scanningfailed">Scanning failed.</string>
    <string name="Guide">Navigation guide</string>
    <string name="Video">Training video</string>
    <string name="News">News</string>
    <string name="TransitPlan">Transit plan</string>
    <string name="VideoN">Training video</string>
    <string name="Patrol">Tour</string>
    <string name="Game1">Guess age!</string>
    <string name="Game2">Addition game</string>
    <string name="Hello">Hello</string>
    <string name="ReminderWater">Don\'t forget to drink water</string>
    <string name="Repose">Reposition robot</string>
    <string name="FlowerGame">Games</string>
    <string name="FlowerGameN">Games</string>
    <string name="Greeting1" translatable="false">Ära unusta juua vett!</string>
    <string name="Greeting2" translatable="false">Soovin imelist päeva!</string>
    <string name="Greeting3" translatable="false">Kuju tuju hea siis käsi kokku löö!</string>
    <string name="Greeting4" translatable="false">Naerata mulle!</string>
    <string name="Greeting5" translatable="false">Ilusat päeva sulle!</string>
    <string name="Greeting6" translatable="false">Kuidas sul läheb?</string>
    <string name="ReposeInfo">Repose works best in the middle of an open area</string>
    <string name="face_recognized_0">Don\'t forget to drink some water!</string>
    <string name="face_recognized_1">Have a beautiful day!</string>
    <string name="face_recognized_2">Smile and clap hands!</string>
    <string name="face_recognized_3">Please smile to me!</string>
    <string name="face_recognized_4">have a nice day!</string>
    <string name="face_recognized_5">How is it going?</string>
    <string name="StopNewsRead">Stop reading</string>
    <string name="StartNewsRead">Start reading</string>
    <string name="patrol_locations">Patrol stop locations</string>
    <string name="start_patrol">Start Patrol</string>
    <string name="start_patrol_stop">Stop Patrol</string>
    <string name="visit_locations_just_once">Visit locations just once</string>
    <string name="use_message_on_arrival_to_patrol_location">Use message on arrival to patrol location</string>
    <string name="use_message_on_person_detection_while_patrolling">Use message on person detection while patrolling</string>
    <string name="pause_after_arrival_to_patrol_location_sec">Pause after arrival to patrol location (sec)</string>
    <string name="repeat_message_after_every_sec">Repeat message after every (sec)</string>
    <string name="patrolEditTextRepeatMessage">Hello, I am a robot!</string>
    <string name="patrolEditTextRepeatMessageInterval">5</string>
    <string name="patrolEditTextFaceDetectedMessage">Drink some water!</string>
    <string name="patrolEditTextArrivalMessage">Good day!</string>
    <string name="patrolEditTextFaceDetectionCustomMessage">Good day!</string>
    <string name="patrolEditTextArrivalPauseDuration">5</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="menu">Menu</string>
    <string name="schedule">Schedule</string>
    <string name="news_next">Next</string>
    <string name="news_previous">Previous</string>
    <string name="register_face">Register Face</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="face_registration_privacy">
        "Privacy\n\n"
        "Faces registered to temi will be converted by algorithm and stored as anonymous face feature data. This data is a pure string and cannot be reverted back to the image. Also the data will not leave the robot at any time, as it is only used locally when your app starts face recognition. The images will not be saved or used for other purpose."
    </string>
    <string name="name">Name</string>
    <string name="varia">Varia</string>
</resources>