<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".locations.LocationsActivity">

    <Button
        android:id="@+id/locationsButtonReturn"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="locationsButtonBackOnClick"
        android:text="@string/Return"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/locationsButtonStop"
        android:layout_width="265dp"
        android:layout_height="100dp"
        android:enabled="false"
        android:onClick="locationsButtonStopOnClick"
        android:text="@string/stop"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/locationsButtonStartNavigation"
        app:layout_constraintStart_toStartOf="@+id/locationsButtonStartNavigation"
        app:layout_constraintTop_toBottomOf="@+id/locationsButtonStartNavigation" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/temi_top_guideline" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/locationRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:fadeScrollbars="false"
        android:scrollbarSize="30dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/locationsTextViewNavigatingTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/navigating_to"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.726"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/locationsTextViewNavigatingToLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="LOCATION"
        android:textSize="96sp"
        app:layout_constraintEnd_toEndOf="@+id/locationsTextViewNavigatingTo"
        app:layout_constraintStart_toStartOf="@+id/locationsTextViewNavigatingTo"
        app:layout_constraintTop_toBottomOf="@+id/locationsTextViewNavigatingTo" />

    <Button
        android:id="@+id/locationsButtonStartNavigation"
        android:layout_width="600dp"
        android:layout_height="140dp"
        android:onClick="locationsButtonStartNavigationOnClick"
        android:text="@string/start_now"
        android:textSize="34sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/locationsTextViewNavigatingToLocation"
        app:layout_constraintStart_toStartOf="@+id/locationsTextViewNavigatingToLocation"
        app:layout_constraintTop_toBottomOf="@+id/locationTextViewDistanceToGo" />

    <TextView
        android:id="@+id/locationTextViewDistanceToGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Distance"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/locationsTextViewNavigatingToLocation"
        app:layout_constraintStart_toStartOf="@+id/locationsTextViewNavigatingToLocation"
        app:layout_constraintTop_toBottomOf="@+id/locationsTextViewNavigatingToLocation" />
</androidx.constraintlayout.widget.ConstraintLayout>